--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 amqp==5.0.9
+aniso8601==9.0.1
+attrs==21.4.0
 billiard==3.6.4.0
 blinker==1.4
 cached-property==1.5.2
 celery==5.1.2
-click==8.0.3
+click==7.1.2
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
@@ -11,19 +13,26 @@ dataclasses==0.8
 Deprecated==1.2.13
 Flask==2.0.2
 Flask-Mail==0.9.1
+flask-restx==0.5.1
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
 importlib-metadata==4.8.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
+jsonschema==4.0.0
 kombu==5.1.0
 MarkupSafe==2.0.1
 packaging==21.3
 prompt-toolkit==3.0.26
+PyJWT==2.3.0
 pyparsing==3.0.7
+pyrsistent==0.18.0
 python-dotenv==0.19.2
 pytz==2021.3
 redis==4.1.2
 six==1.16.0
-typing-extensions==4.0.1
+SQLAlchemy==1.4.31
+typing_extensions==4.0.1
 vine==5.0.0
 wcwidth==0.2.5
 Werkzeug==2.0.2
