--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ click-repl==0.2.0
 dataclasses==0.8
 Deprecated==1.2.13
 Flask==2.0.2
+Flask-Cors==3.0.10
 Flask-Mail==0.9.1
 flask-restx==0.5.1
 Flask-SQLAlchemy==2.5.1
