--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Deploy to my server
-        uses: appleboy/ssh-action@main
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_CREDENTIAL_HOSTNAME }}
           username: ${{ secrets.SERVER_CREDENTIAL_HOSTNAME }}
