--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           host: ${{ secrets.SERVER_CREDENTIAL_HOSTNAME }}
           username: ${{ secrets.SERVER_CREDENTIAL_HOSTNAME }}
-          key: ${{ secrets.SERVER_CREDENTIAL_KEY }}
+          password: ${{ secrets.SERVER_CREDENTIAL_PASSWORD }}
           port: 2211
           script: |
             cd /home/rezayogaswara/python_projects/flask-middleware-setup
