--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,10 +27,11 @@ jobs:
       - name: Deploy to my server
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.SERVER_CREDENTIAL_HOSTNAME }}
-          username: ${{ secrets.SERVER_CREDENTIAL_HOSTNAME }}
+          host: rezayogaswara.com
+          username: root
           key: ${{ secrets.SERVER_CREDENTIAL_PRIVATE_KEY }}
           port: 2211
+          passphrase: Rezay0ga@85
           script: |
             cd /home/rezayogaswara/python_projects/flask-middleware-setup
             ls -ahl
