--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,8 +27,7 @@ jobs:
       - name: Deploy to my server
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.SERVER_CREDENTIAL_HOST }}
-          # host: rezayogaswara.com
+          host: ${{ secrets.SERVER_CREDENTIAL_HOSTNAME }}
           username: ${{ secrets.SERVER_CREDENTIAL_USERNAME }}
           key: ${{ secrets.SERVER_CREDENTIAL_PRIVATE_KEY }}
           port: 2211
