--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,7 +15,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "cd"
-  my_cd_pipeline:
+  cd-pipeline:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
