--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -36,10 +36,13 @@ jobs:
           debug: true
           script: |
             cd /home/rezayogaswara/python_projects/flask-middleware-setup
-            ls -ahl
             pwd
+            ls -ahl
+            echo ----------------------------------------------
             git pull origin main
+            echo ----------------------------------------------
             git log --all --decorate --oneline --graph
+            echo ----------------------------------------------
             sudo systemctl stop flaskmiddleware
             sudo systemctl start flaskmiddleware
             sudo systemctl status flaskmiddleware
