--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
 amqp==5.0.9
 aniso8601==9.0.1
 attrs==21.4.0
+autopep8==1.6.0
 billiard==3.6.4.0
 blinker==1.4
+bugsnag==4.1.1
 cached-property==1.5.2
 celery==5.1.2
 click==7.1.2
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
-#dataclasses==0.8
-dataclasses
+dataclasses==0.8
 Deprecated==1.2.13
 Flask==2.0.2
 Flask-Cors==3.0.10
@@ -26,6 +27,7 @@ kombu==5.1.0
 MarkupSafe==2.0.1
 packaging==21.3
 prompt-toolkit==3.0.26
+pycodestyle==2.8.0
 PyJWT==2.3.0
 pyparsing==3.0.7
 pyrsistent==0.18.0
@@ -34,9 +36,11 @@ pytz==2021.3
 redis==4.1.2
 six==1.16.0
 SQLAlchemy==1.4.31
+toml==0.10.2
 typing_extensions==4.0.1
 vine==5.0.0
 wcwidth==0.2.5
+WebOb==1.8.7
 Werkzeug==2.0.2
 wrapt==1.13.3
 zipp==3.6.0
