--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -43,6 +43,9 @@ jobs:
             echo ----------------------------------------------
             git log --all --decorate --oneline --graph
             echo ----------------------------------------------
+            source env/bin/activate
+            pip install -r requirements.txt
+            echo ----------------------------------------------
             sudo systemctl stop flaskmiddleware
             sudo systemctl start flaskmiddleware
             sudo systemctl status flaskmiddleware
