--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,8 @@ click==7.1.2
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
-dataclasses==0.8
+#dataclasses==0.8
+dataclasses
 Deprecated==1.2.13
 Flask==2.0.2
 Flask-Cors==3.0.10
