--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -44,6 +44,7 @@ jobs:
             git log --all --decorate --oneline --graph
             echo ----------------------------------------------
             source env/bin/activate
+            pip install --upgrade pip
             pip install -r requirements.txt
             echo ----------------------------------------------
             sudo systemctl stop flaskmiddleware
